# LiliaGithub

./: .gitignore  .yarnrc.yml  AGENTS.md  DESIGN.md  README.md  README.zh-CN.md  app.config.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json  vite.config.ts
.codegraph/: .gitignore
.github/workflows/: ci.yml  pages.yml  release.yml
.migration-output/: migration-bundle.json
agent-debug/: verify-agent-debug.mjs  workflow-handoff-fixture.mjs
docs/: feature-status.json  index.md
docs/.vitepress/: config.ts
docs/acceptance/: 1.0-stability-2026-07-11.md
docs/design/: agent-debug-harness.md
docs/guide/: development.md  github-owners.md
scripts/: check-package-manager.mjs  generate-open-source-license-manifest.mjs  lilia-ui-deps.mjs  sync-feature-status.mjs  tauri-dev.mjs  tauri-install.mjs
src/: App.vue  createLiliaGithubApp.ts  main.ts  router.ts  routerMeta.d.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/agent_debug/: Cargo.toml
src-tauri/crates/agent_debug/src/: lib.rs  tauri_commands.rs
src-tauri/crates/git/: Cargo.toml
src-tauri/crates/git/src/: lib.rs
src-tauri/crates/github/: Cargo.toml
src-tauri/crates/github/src/: lib.rs
src-tauri/crates/github/src/discussions/: mapping.rs  mod.rs  queries.rs  tests.rs  validation.rs  wire.rs
src-tauri/crates/lilia_github_contracts/: Cargo.toml
src-tauri/crates/lilia_github_contracts/src/: code_review.rs  discovery.rs  home_attention.rs  lib.rs  notifications.rs  personal_home.rs  workspace.rs
src-tauri/crates/lilia_github_contracts/src/workspace/: github_discussions.rs
src-tauri/crates/workspace/: Cargo.toml
src-tauri/crates/workspace/src/: lib.rs  runtime.rs
src-tauri/crates/workspace/src/tauri_commands/: bulk.rs  code_review.rs  conversations.rs  discovery.rs  file_browser.rs  github.rs  github_discussions.rs  home_attention.rs  launch.rs  mod.rs  notifications.rs  personal_home.rs  refresh.rs  repos.rs  settings.rs  storage.rs  system.rs  tasks.rs
src-tauri/crates/workspace/src/workspace/: app_delivery_handoff.rs  bulk.rs  conversations.rs  discovery.rs  discovery_tests.rs  file_browser.rs  github.rs  github_discussions.rs  launch.rs  lilia_code_handoff.rs  mod.rs  notifications.rs  operations.rs  path_relocation.rs  personal_home.rs  refresh.rs  repo_guard.rs  repos.rs  settings.rs  shared.rs  storage.rs  system.rs  tasks.rs  tests.rs  watcher.rs
src-tauri/crates/workspace/src/workspace/code_review/: graphql.rs  mapping.rs  mod.rs  mutations.rs  reads.rs  tests.rs
src-tauri/crates/workspace/src/workspace/discovery/: cache.rs  mod.rs  review.rs
src-tauri/crates/workspace/src/workspace/discovery/scan/: aggregate.rs  issues.rs  mod.rs  pull_requests.rs  releases.rs  repository_status.rs  workflows.rs
src-tauri/crates/workspace/src/workspace/home_attention/: aggregate.rs  mod.rs  pull_requests.rs  time.rs  workflows.rs
src-tauri/src/: agent_debug.rs  lib.rs  main.rs  runtime.rs  workspace.rs
src-tauri/src/workspace/: bulk.rs  file_browser.rs  github.rs  launch.rs  mod.rs  readme.rs  repos.rs  settings.rs  shared.rs  system.rs  tasks.rs  tests.rs  types.rs
src/agentDebug/: compat.ts  harness.ts  types.ts
src/app/: AppEffects.vue  AppRoot.vue
src/components/: CommandPalette.vue  ConfirmDialog.vue  ContextMenuHost.vue  ContributionIdentityRecommendations.vue  Dropdown.vue  GitHubTimelineList.vue  TitleBar.vue
src/composables/: menuMotion.ts  sessionContext.ts  useAccountPreferences.ts  useBackgroundTasks.ts  useCloneRepoDialog.ts  useComponentEpoch.ts  useConcurrentTaskQueue.ts  useContextMenu.ts  useCornerStyle.ts  useGlobalScrollbarVisibility.ts  useHomeWorkflowFailureHandoff.ts  useLatestAsyncLoader.ts  usePendingTaskTracker.ts  useRepoDetailController.ts  useRepoLocalChangesPrompt.ts  useRepoOverviewCardHeight.ts  useResizablePane.ts  useShellRepoActions.ts  useShellSearch.ts  useTheme.ts  useWorkspace.ts  useWorkspaceRecentContext.ts
src/config/: appShell.ts  repoSettingsManifest.ts
src/layouts/: AppShell.vue  SecondaryPanel.vue  SettingsSidebar.vue
src/pages/: CommitDetail.vue  Discovery.vue  Home.vue  Notifications.vue  Organization.vue  PersonalHome.vue  Profile.vue  RepoDetail.vue  Settings.vue  homeOverviewCache.ts
src/services/: workspace.ts
src/styles/: diffCodeTokens.css  page.css  shell.css
src/tauri/: runtime.ts
src/ui/: contextMenuHost.ts  contract.ts  index.ts  preset.ts  styles.css
src/utils/: asyncComponent.ts  asyncModule.ts  commitGraph.ts  contributionChart.ts  contributionIdentities.ts  diffCode.ts  githubErrors.ts  githubLanguageColors.ts  githubRepositoryScope.ts  githubTemplates.ts  homeContinueItems.ts  homePendingItems.ts  keyboardShortcuts.ts  languageStats.ts  launchDiagnostics.ts  lowPriorityScheduler.ts  notifications.ts  personalHome.ts  projectMomentum.ts  readmeLinks.ts  recoveryGuidance.ts  remoteRepo.ts  repoContext.ts  repoDisplay.ts  (+9 more)
tests/: aboutSection.test.ts  accountSettings.test.ts  agentDebugCompat.test.ts  agentDebugHarness.test.ts  agentDebugVerify.test.ts  appShell.test.ts  appearanceConfig.test.ts  asyncModule.test.ts  authFlow.test.ts  commitGraph.test.ts  contextMenuHost.test.ts  contributionChart.test.ts  controlCenterBoard.test.ts  controlCenterContinue.test.ts  controlCenterWorkItems.test.ts  conversationWrites.test.ts  cornerStyle.test.ts  diagnostics.test.ts  diffCode.test.ts  discoveryAggregation.test.ts  discoveryAssignedWork.test.ts  discoveryClient.test.ts  discoveryPanelActions.test.ts  discoveryRepositories.test.ts  discoveryRules.test.ts  discoveryUi.test.ts  discussionMutations.test.ts  dropdown.test.ts  githubErrors.test.ts  githubOwnerSidebarSection.test.ts  githubRepositoryScopeControl.test.ts  githubTemplates.test.ts  githubTimelineList.test.ts  githubWatchedRepositoriesCard.test.ts  globalScrollbarVisibility.test.ts  homeAttention.test.ts  homeColdStart.test.ts  homeContributionCard.test.ts  homeDecisionModel.test.ts  homeOverviewCache.test.ts  (+70 more)
(+208 files in other folders)
