[package]
name = "lilia_github"
version = "1.0.0"
description = "A Tauri desktop app for local GitHub workspace and repository management."
authors = ["sena-nana"]
homepage = "https://github.com/sena-nana/LiliaGithub"
repository = "https://github.com/sena-nana/LiliaGithub"
edition = "2021"

[lib]
name = "lilia_github_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1", default-features = false, features = ["rt"] }
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "form", "json", "query", "rustls", "system-proxy"] }
keyring = "4.0.1"
libc = "0.2"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
tauri-plugin-updater = "2"

[profile.dev]
debug = "line-tables-only"
incremental = true
codegen-units = 256

[profile.dev.package."*"]
debug = false
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
incremental = false
