[package]
name = "lilia_github"
version = "1.0.0"
description = "A Tauri desktop app for local GitHub workspace and repository management."
authors = ["sena-nana"]
homepage = "https://github.com/sena-nana/LiliaGithub"
repository = "https://github.com/sena-nana/LiliaGithub"
edition = "2021"

[workspace]
members = [
  ".",
  "crates/agent_debug",
  "crates/git",
  "crates/github",
  "crates/lilia_github_contracts",
  "crates/workspace",
]
resolver = "2"

[lib]
name = "lilia_github_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-mutsuki = { git = "https://github.com/sena-nana/MutsukiTauriHost.git", rev = "64ca4e149fc9cdd53fd6d7e7f4d315acbe745cf6" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lilia_github_agent_debug = { path = "crates/agent_debug" }
lilia_github_workspace = { path = "crates/workspace" }

[profile.dev]
debug = "line-tables-only"
incremental = true
codegen-units = 256

[profile.dev.package."*"]
debug = false
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
incremental = false
