[package]
name = "lilia_github"
version = "1.0.0"
description = "A Tauri desktop app for local GitHub workspace and repository management."
authors = ["sena-nana"]
homepage = "https://github.com/sena-nana/LiliaGithub"
repository = "https://github.com/sena-nana/LiliaGithub"
edition = "2021"

[workspace]
members = [
  ".",
  "crates/agent_debug",
  "crates/git",
  "crates/github",
  "crates/lilia_github_contracts",
  "crates/workspace",
]
resolver = "2"

[lib]
name = "lilia_github_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
agent-debug-webdriver = ["dep:tauri-plugin-wdio-webdriver"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-wdio-webdriver = { version = "1", optional = true }
tauri-plugin-lilia = { git = "https://github.com/sena-nana/LiliaUI.git", rev = "ae776ecc7320cfa5b63d26a015e341cdeb9839e1" }
tauri-plugin-mutsuki = { git = "https://github.com/sena-nana/MutsukiTauriHost.git", rev = "fc07770e4d031ff5a7cad353151046a01495eff2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lilia_github_agent_debug = { path = "crates/agent_debug" }
lilia_github_workspace = { path = "crates/workspace" }

[profile.dev]
debug = "line-tables-only"
incremental = true
codegen-units = 256

[profile.dev.package."*"]
debug = false
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
incremental = false
