[package]
name = "lilia_github_workspace"
version = "1.0.0"
edition = "2021"

[dependencies]
base64 = "0.22"
dunce = "1"
futures-util = "0.3"
keyring = "4.0.1"
libc = "0.2"
lilia_github_contracts = { path = "../lilia_github_contracts" }
lilia_github_git = { path = "../git" }
lilia_github_github = { path = "../github" }
mutsuki-runtime-contracts = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "94ba3a81d6bf4fb1263007766a64ac8be3fec1ab" }
mutsuki-runtime-core = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "94ba3a81d6bf4fb1263007766a64ac8be3fec1ab" }
mutsuki-runtime-host = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "94ba3a81d6bf4fb1263007766a64ac8be3fec1ab" }
mutsuki-tauri-bridge = { git = "https://github.com/sena-nana/MutsukiTauriHost.git", rev = "712080085bd1b8be923448940002aa3af8337f1b" }
mutsuki-tauri-host = { git = "https://github.com/sena-nana/MutsukiTauriHost.git", rev = "712080085bd1b8be923448940002aa3af8337f1b" }
notify = "6.1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "form", "json", "query", "rustls", "system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tokio = { version = "1", default-features = false, features = ["macros", "rt", "sync"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
libloading = "0.8"
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }
