[package]
name = "lilia_github_workspace"
version = "1.0.0"
edition = "2021"

[dependencies]
base64 = "0.22"
dunce = "1"
futures-util = "0.3"
keyring = "4.0.1"
libc = "0.2"
lilia_github_contracts = { path = "../lilia_github_contracts" }
lilia_github_git = { path = "../git" }
lilia_github_github = { path = "../github" }
mutsuki-runtime-contracts = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "1787ab5c6d9aee9982505d0686d6c2e03547275e" }
mutsuki-runtime-core = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "1787ab5c6d9aee9982505d0686d6c2e03547275e" }
mutsuki-runtime-host = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "1787ab5c6d9aee9982505d0686d6c2e03547275e" }
mutsuki-tauri-bridge = { git = "https://github.com/sena-nana/MutsukiTauriHost.git", rev = "af169aaf7f13c9da0cbbe1214ac97432f6a259e0" }
mutsuki-tauri-host = { git = "https://github.com/sena-nana/MutsukiTauriHost.git", rev = "af169aaf7f13c9da0cbbe1214ac97432f6a259e0" }
notify = "6.1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "form", "json", "query", "rustls", "system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tokio = { version = "1", default-features = false, features = ["macros", "rt", "sync"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
libloading = "0.8"
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }
